2017-11-26         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* README: Update to discuss new gawk 4.2 version 2 API.

2017-11-26         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Add -s option to print spec.in to
	stdout and exit. This is useful for upgrading old spec.in packaging.

2017-11-25         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Update spec file template to Fedora
	standards.

2017-11-20         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Patch to create sample extension code
	that is compatible with API versions 1 and 2.

2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	* make_extension_directory: Add -C option for a C++ extension.

2017-11-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* Development: Fix typo.

2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Change default changelog message
	to say "Rebuilt for new release".

2017-10-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README, Development: Update rpmbuild instructions now that the
	spec files have been removed from the tarballs.

2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh:  Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Fix FSF address. Patch spec file
	template to meet Fedora requirements.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Patch spec file template to fix some
	rpmlint complaints.

2016-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Add comment about num_expected_args
	actually being the maximum number of allowed args.
