@@ -5,8 +5,8 @@ if [ $# -lt 1 ]; then
 
 This script cds into the <directory> and runs these commands:
 
-	autoreconf -i && ./configure <arguments> && make && make check && \\
-	   	make install
+	autoreconf -i && ./configure <arguments> && make clean && make && \\
+		make check && make install
 
 The script exit status indicates whether the commands completed
 successfully." 1>&2
@@ -25,4 +25,4 @@ dir="$1"
 shift 1
 echo "
 Building in directory $dir"
-doit cd "$dir" && doit autoreconf -i && doit ./configure "$@" && doit make && doit make check && doit make install && echo "Built $dir successfully."
+doit cd "$dir" && doit autoreconf -i && doit ./configure "$@" && doit make clean && doit make && doit make check && doit make install && echo "Built $dir successfully."
