@@ -1,3 +1,9 @@
+2017-12-02         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* build.sh, check.sh: Run "make clean" before "make" to make sure
+	we recompile and don't retain objects possibly compiled against other
+	versions of gawk.
+
 2017-11-26         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* README: Update to discuss new gawk 4.2 version 2 API.
